--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Nathanael Sumpter",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
