--- a/UI/package.json
+++ b/UI/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --port 3001",
-    "build": "tsc -b && vite build",
+    "build": "tsc -b && vite build | pino-pretty",
     "lint": "eslint .",
     "preview": "vite preview"
   },
