--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-jwt": "^8.4.1",
-    "jwks-rsa": "^3.1.0"
+    "jwks-rsa": "^3.1.0",
+    "pino-http": "^10.3.0",
+    "pino-mongodb": "^4.3.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
